cfail/ui/not-send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> $DIR/not-send.rs:18:5
   |
11 | fn is_send<T>()
   |    ------- required by a bound in this
12 | where
13 |     T: Send,
   |        ---- required by this bound in `is_send`
...
18 |     is_send::<Consumer<NotSend, _, 4>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
   |
   = help: within `PhantomData<*const ()>`, the trait `Send` is not implemented for `*const ()`
   = note: required because it appears within the type `PhantomData<*const ()>`
   = note: required because of the requirements on the impl of `Send` for `Consumer<'_, PhantomData<*const ()>, _, 4_usize>`

error[E0277]: `*const ()` cannot be sent between threads safely
  --> $DIR/not-send.rs:19:5
   |
11 | fn is_send<T>()
   |    ------- required by a bound in this
12 | where
13 |     T: Send,
   |        ---- required by this bound in `is_send`
...
19 |     is_send::<Producer<NotSend, _, 4>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
   |
   = help: within `PhantomData<*const ()>`, the trait `Send` is not implemented for `*const ()`
   = note: required because it appears within the type `PhantomData<*const ()>`
   = note: required because of the requirements on the impl of `Send` for `Producer<'_, PhantomData<*const ()>, _, 4_usize>`

error[E0277]: `*const ()` cannot be sent between threads safely
  --> $DIR/not-send.rs:20:5
   |
11 | fn is_send<T>()
   |    ------- required by a bound in this
12 | where
13 |     T: Send,
   |        ---- required by this bound in `is_send`
...
20 |     is_send::<Queue<NotSend, _, 4>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
   |
   = help: within `Queue<PhantomData<*const ()>, _, 4_usize>`, the trait `Send` is not implemented for `*const ()`
   = note: required because it appears within the type `PhantomData<*const ()>`
   = note: required because it appears within the type `[PhantomData<*const ()>; 4]`
   = note: required because it appears within the type `ManuallyDrop<[PhantomData<*const ()>; 4]>`
   = note: required because it appears within the type `MaybeUninit<[PhantomData<*const ()>; 4]>`
   = note: required because it appears within the type `Queue<PhantomData<*const ()>, _, 4_usize>`

error[E0277]: `*const ()` cannot be sent between threads safely
  --> $DIR/not-send.rs:21:5
   |
11 | fn is_send<T>()
   |    ------- required by a bound in this
12 | where
13 |     T: Send,
   |        ---- required by this bound in `is_send`
...
21 |     is_send::<heapless::Vec<NotSend, 4>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
   |
   = help: within `heapless::Vec<PhantomData<*const ()>, 4_usize>`, the trait `Send` is not implemented for `*const ()`
   = note: required because it appears within the type `PhantomData<*const ()>`
   = note: required because it appears within the type `[PhantomData<*const ()>; 4]`
   = note: required because it appears within the type `ManuallyDrop<[PhantomData<*const ()>; 4]>`
   = note: required because it appears within the type `MaybeUninit<[PhantomData<*const ()>; 4]>`
   = note: required because it appears within the type `heapless::Vec<PhantomData<*const ()>, 4_usize>`
